--- a/Chat/ChatConsoleApp/App.config
+++ b/Chat/ChatConsoleApp/App.config
@@ -4,7 +4,7 @@
 		<section name="ClientSetup" type="Cognibase"/>
 	</configSections>
 	<appSettings>
-		<add key="Log To Console Level" value="Trace"/>
+		<add key="Log To Output Level" value="Trace"/>
 		<add key="Log To File Level" value="Trace"/>		
 		<add key="Login With Stored Credentials" value="true"/>
 	</appSettings>
