--- a/Chat/ChatServer/App.config
+++ b/Chat/ChatServer/App.config
@@ -20,15 +20,24 @@
 	     Operating System. -->
 			<IdentityStoreSetup Name="Basic" availableversion="1">
 				
-				<!-- Here we define the "Configured" Accounts. The data are stored in the DB only. -->
-				<ConfiguredAccounts domainid="Basic" domainfullname="Basic">
-					<User name="admin" password="admin" />
-					<User name="user1" password="user1" />
-					<User name="user2" password="user2" />
-					<User name="user3" password="user3" />
-					<User name="user4" password="user4" />
-					<User name="user5" password="user5" />
-				</ConfiguredAccounts>
+				<!-- 'Source Type' possible values: 
+					 { 
+						ProcessAuthenticatingDomain : from the local machine identity registry (if local is set) or from the ActiveDirectory Domain the machine participates
+						Machine : from the local machine identity registry
+						ActiveDirectory : from the defined ActiveDirectory Domain,
+						Configured : from the configured accounts 
+						IdentityServer : from the defined Identity Server (OAuth2)
+					} -->
+				<ImportedDomain Name="1" sourcetype="Configured" availableversion="1" domainid="Basic" domainfullname="Basic" >
+					<ConfiguredAccounts>
+						<User name="admin" password="admin" />
+						<User name="user1" password="user1" />
+						<User name="user2" password="user2" />
+						<User name="user3" password="user3" />
+						<User name="user4" password="user4" />
+						<User name="user5" password="user5" />
+					</ConfiguredAccounts>
+				</ImportedDomain>
 			
 			</IdentityStoreSetup>
 
