--- a/Todo/TodoServer/App.config
+++ b/Todo/TodoServer/App.config
@@ -22,11 +22,20 @@
 			<!-- Defined the security accounts. Here we define that the security accounts are coming from the
 	     Operating System. -->
 			<IdentityStoreSetup Name="Basic" availableversion="1">
-				<!-- Here we define the "Configured" Accounts. The data are stored in the DB only. -->
-				<ConfiguredAccounts domainid="Basic" domainfullname="Basic">
-					<Role name="admins" memberusers="user1" />
-					<User name="user1" password="user1" />
-				</ConfiguredAccounts>
+				<!-- 'Source Type' possible values: 
+					 { 
+						ProcessAuthenticatingDomain : from the local machine identity registry (if local is set) or from the ActiveDirectory Domain the machine participates
+						Machine : from the local machine identity registry
+						ActiveDirectory : from the defined ActiveDirectory Domain,
+						Configured : from the configured accounts 
+						IdentityServer : from the defined Identity Server (OAuth2)
+					} -->
+				<ImportedDomain Name="1" sourcetype="Configured" availableversion="1" domainid="Basic" domainfullname="Basic" >
+					<ConfiguredAccounts>
+						<Role name="admins" memberusers="user1" />
+						<User name="user1" password="user1" />
+					</ConfiguredAccounts>
+				</ImportedDomain>
 			</IdentityStoreSetup>
 
 			<DataStoresSetup>
