--- a/Chat/ChatBotAgent/App.config
+++ b/Chat/ChatBotAgent/App.config
@@ -4,12 +4,13 @@
 		<section name="ClientSetup" type="Cognibase"/>
 	</configSections>
 	<appSettings>
-		<add key="Log To Output Level" value="Trace"/>
+		<add key="Log To Console Level" value="Trace"/>
 		<add key="Log To File Level" value="Trace"/>		
+		<add key="Login With Stored Credentials" value="true"/>
 	</appSettings>
 	<ClientSetup>
 		<CommunicationSetup>
-			<client library="streaming" protocol="ws" />
+			<client library="streaming" protocol="ws"/>
 		</CommunicationSetup>
 	</ClientSetup>
 </configuration>
